test/files/neg/t5903d.check
Test_2.scala:4: error: extractor macros can only expand into extractor calls
    case t"$x" => println(x)
         ^
one error found
